feat: add getById method ✨
